# WebProjectERP

inventory-platform/: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  docker-compose.yml
inventory-platform/docs/: api_examples.md  nginx.conf  threat_model.md
inventory-platform/portal_django/: Dockerfile  manage.py  requirements.txt
inventory-platform/portal_django/accounts/: admin.py  models.py  urls.py  views.py
inventory-platform/portal_django/core/: logging.py  middleware.py  views.py
inventory-platform/portal_django/dashboard/: admin.py  models.py  urls.py  views.py
inventory-platform/portal_django/portal/: asgi.py  settings.py  urls.py
inventory-platform/portal_django/tests/: test_portal.py
inventory-platform/services_fastapi/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
inventory-platform/services_fastapi/app/: main.py
inventory-platform/services_fastapi/app/api/v1/routes/: audit.py  branches.py  items.py  orders.py  stock.py
inventory-platform/services_fastapi/app/core/: config.py  logging.py  security.py
inventory-platform/services_fastapi/app/db/: session.py
inventory-platform/services_fastapi/app/migrations/: env.py  script.py.mako
inventory-platform/services_fastapi/app/migrations/versions/: 0001_init.py  0001_initial.py
inventory-platform/services_fastapi/app/models/: __init__.py  domain.py
inventory-platform/services_fastapi/app/schemas/: domain.py
inventory-platform/services_fastapi/app/services/: audit.py  order_service.py  seed.py
inventory-platform/services_fastapi/app/tests/: test_api.py
(+6 files in other folders)
